--- a/src/equipe/team/style.css
+++ b/src/equipe/team/style.css
@@ -4,21 +4,22 @@
     margin-top: 2cm;
     margin-bottom: 2cm;
 }
-.card{
-    width: 250px;
-    border-radius: 25px;
-  
-}
+
 
 
 .card{
     box-shadow: 0 5px 3px 3px rgba(0,0,0,.2);
-    background-color: red;
+
+
 }
 
 .name{
-    font-size: 16px;
+    font-size: 25px;
     text-align: center;
     margin-top: 1cm;
    
+}
+
+.poste{
+    text-align: center;
 }
