modification after second merge and add footer

--- a/src/Accueil/Partenaires/Partenaire.css
+++ b/src/Accueil/Partenaires/Partenaire.css
@@ -8,6 +8,7 @@
   border-style:inset;
   border-color: #cd3e3a;
   margin-top: 50px;
+  margin-bottom: 100px;
 }
 .partenaire h2{
   margin-top: 50px;
@@ -36,10 +37,11 @@
   
   .imagee {
     display: block;
-    width: 80%;
+    width: 60%;
     height: auto;
     margin-left: 50px;
     margin-right: 50px;
+    margin-bottom: 50px;
   }
   
   .overlayy {
