--- a/src/Contact/contact-form/Form.css
+++ b/src/Contact/contact-form/Form.css
@@ -2,6 +2,7 @@
 .containere {
   display: flex;
   justify-content: center;
+  margin-top: 70px;
 }
 .contact-info-title {
     color: white;
@@ -24,6 +25,7 @@
     margin-left: 5%;
     margin-bottom: 0%;
     height: 400px;
+   
     
 }
 .contact-info{
